--- a/TechLekh.Web/Views/Shared/_Layout.cshtml
+++ b/TechLekh.Web/Views/Shared/_Layout.cshtml
@@ -29,6 +29,7 @@
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" asp-area="" asp-controller="AdminTags" asp-action="Add">Add Tag</a></li>
                                 <li><a class="dropdown-item" asp-area="" asp-controller="AdminTags" asp-action="List">Show Tags</a></li>
+                                <li><a class="dropdown-item" asp-area="" asp-controller="AdminBlogPost" asp-action="Add">Add New Blog Post</a></li>
                             </ul>
                         </li>
                         
