--- a/TechLekh.Web/Views/AdminBlogPost/Edit.cshtml
+++ b/TechLekh.Web/Views/AdminBlogPost/Edit.cshtml
@@ -100,5 +100,38 @@ else
 	<p> No post found</p>
 }
 
+@section Scripts {
+	<script>
+		var editor = new FroalaEditor('#content', {
+			imageUploadURL: '/api/images'
+		});
+
+		const imgUploadElement = document.getElementById('imgUpload');
+		const imgUrlElement = document.getElementById('featuredImageUrl');
+		const imgDisplayElement = document.getElementById('imgDisplay');
+
+		async function uploadImage(e){
+			 console.log(e.target.files[0]);
+			  let data = new FormData();
+			  data.append('file',e.target.files[0]);
+
+			  await fetch('/api/images', {
+				  method: 'POST',
+				  headers: {
+					  'Accept':'*/*',
+				  },
+				  body: data
+			  }).then(response => response.json())
+					.then(result => {
+						imgUrlElement.value = result.link;
+						imgDisplayElement.src =  result.link;
+						imgDisplayElement.style.display = 'block';
+					});
+		}
+
+		imgUploadElement.addEventListener('change',uploadImage);
+	</script>
+}
+
 
 
