feat(auth): implement user registration

--- a/TechLekh.Web/Views/Shared/_Layout.cshtml
+++ b/TechLekh.Web/Views/Shared/_Layout.cshtml
@@ -36,8 +36,12 @@
                                 <li><a class="dropdown-item" asp-area="" asp-controller="AdminBlogPost" asp-action="List">View Blog Post</a></li>
                             </ul>
                         </li>
-                        
+
                     </ul>
+                    <div class="d-flex align-items-center">
+                        <a class="btn me-3 bg-light text-dark"
+                           asp-area="" asp-controller="Account" asp-action="Register">Register</a>
+                    </div>
                 </div>
             </div>
         </nav>
