--- a/TechLekh.Web/Views/Shared/_Layout.cshtml
+++ b/TechLekh.Web/Views/Shared/_Layout.cshtml
@@ -28,17 +28,21 @@
                         <li class="nav-item">
                             <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                Admin
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" asp-area="" asp-controller="AdminTags" asp-action="Add">Add Tag</a></li>
-                                <li><a class="dropdown-item" asp-area="" asp-controller="AdminTags" asp-action="List">Show Tags</a></li>
-                                <li><a class="dropdown-item" asp-area="" asp-controller="AdminBlogPost" asp-action="Add">Add New Blog Post</a></li>
-                                <li><a class="dropdown-item" asp-area="" asp-controller="AdminBlogPost" asp-action="List">View Blog Post</a></li>
-                            </ul>
-                        </li>
+                        @if (signInManager.IsSignedIn(User) && User.IsInRole("Admin"))
+                        {
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    Admin
+                                </a>
+                                <ul class="dropdown-menu">
+                                    <li><a class="dropdown-item" asp-area="" asp-controller="AdminTags" asp-action="Add">Add Tag</a></li>
+                                    <li><a class="dropdown-item" asp-area="" asp-controller="AdminTags" asp-action="List">Show Tags</a></li>
+                                    <li><a class="dropdown-item" asp-area="" asp-controller="AdminBlogPost" asp-action="Add">Add New Blog Post</a></li>
+                                    <li><a class="dropdown-item" asp-area="" asp-controller="AdminBlogPost" asp-action="List">View Blog Post</a></li>
+                                    <li><a class="dropdown-item" asp-area="" asp-controller="AdminUsers" asp-action="List">All Users</a></li>
+                                </ul>
+                            </li>
+                        }
 
                     </ul>
                     <div class="d-flex align-items-center">
