--- a/TechLekh.Web/Views/Account/Login.cshtml
+++ b/TechLekh.Web/Views/Account/Login.cshtml
@@ -23,7 +23,7 @@
 				<div class="mb-3">
 					<button type="submit" class="btn btn-dark">Login</button>
 				</div>
-				
+				<input type="hidden" asp-for="ReturnUrl" />
 			</form>
 
 		</div>
