--- a/TechLekh.Web/Views/Blogs/Index.cshtml
+++ b/TechLekh.Web/Views/Blogs/Index.cshtml
@@ -1,4 +1,7 @@
-﻿@model TechLekh.Web.Models.ViewModels.BlogDetaisViewModel
+﻿@using Microsoft.AspNetCore.Identity
+@inject SignInManager<IdentityUser> signInManager
+@inject UserManager<IdentityUser> userManager
+@model TechLekh.Web.Models.ViewModels.BlogDetaisViewModel
 @{
 	ViewData["Title"] = Model.PageTitle;
 }
@@ -11,6 +14,26 @@
 				<div class="d-flex justify-content-between mb-3">
 					<span class="text-secondary">@Model.Author</span>
 					<span class="text-secondary">@Model.PublishedDate.ToShortDateString()</span>
+				</div>
+
+				<div class="mb-3">
+					@if (signInManager.IsSignedIn(User))
+					{
+						@if (Model.IsLikedByCurrentUser)
+						{
+							<a style="">
+								<i class="bi bi-hand-thumbs-up-fill"></i>
+							</a>
+						}
+						else
+						{
+							<a id="btnLike" style="cursor: pointer">
+								<i class="bi bi-hand-thumbs-up"></i>
+							</a>
+						}
+
+					}
+					<span id="totalLikes">@Model.TotalLikes</span> likes
 				</div>
 
 				<div class="mb-3 d-flex">
@@ -32,3 +55,42 @@
 		</div>
 	</div>
 </div>
+
+@section Scripts {
+	<script>
+		const btnLikeElement = document.getElementById('btnLike');
+		const totalLikeElement = document.getElementById('totalLikes');
+
+		async function getTotalLikes(){
+			fetch('/api/blogpostlike/@Model.Id/totalLikes', {
+				method : 'GET',
+				headers: {
+					'Content-Type': 'application/json',
+					'Accept': '*/*'
+				}
+			}).then(data => data.json())
+				.then(result => totalLikeElement.innerHTML=result);
+				//.then(result => console.log(result));
+		}
+
+		async function addLikeForBlog(){
+			fetch('/api/BlogPostLike/Add',{
+				method: 'POST',
+				headers: {
+					'Content-Type': 'application/json',
+					'Accept': '*/*',
+				},
+				body: JSON.stringify({
+					blogPostId: '@Model.Id',
+					userId: '@userManager.GetUserId(User)'
+				})
+			}).then(() => {
+				btnLikeElement.innerHTML = '<i class="bi bi-hand-thumbs-up-fill"></i>';
+				btnLikeElement.removeEventListener('click', addLikeForBlog);
+				getTotalLikes();
+			});
+		}
+
+		btnLikeElement.addEventListener('click', addLikeForBlog);
+	</script>
+}
