--- a/TechLekh.Web/Views/Blogs/Index.cshtml
+++ b/TechLekh.Web/Views/Blogs/Index.cshtml
@@ -69,7 +69,21 @@
 						}
 					</div>
 					<div class="card-body">
-						
+						@if (Model.Comments != null && Model.Comments.Any())
+						{
+							@foreach (var comment in Model.Comments)
+							{
+								<div class="card mb-3">
+									<div class="card-body">
+										@comment.Description
+									</div>
+									<div class="d-flex justify-content-between p-2">
+										<span class="text-secondary">@comment.Username</span>
+										<span class="text-secondary">@comment.DateAdded.ToShortDateString()</span>
+									</div>
+								</div>
+							}
+						}
 					</div>
 				</div>
 			}
