feat(users): implement user delete

--- a/TechLekh.Web/Views/AdminUsers/List.cshtml
+++ b/TechLekh.Web/Views/AdminUsers/List.cshtml
@@ -37,7 +37,7 @@
                                   asp-controller="AdminUsers"
                                   asp-action="Delete"
                                   asp-route-id="@user.Id">
-                                
+                                <button class="btn btn-danger" type="submit">Delete</button>
                             </form>
                         </td>
                     </tr>
