--- a/TechLekh.Web/Views/Account/Register.cshtml
+++ b/TechLekh.Web/Views/Account/Register.cshtml
@@ -10,7 +10,7 @@
 				<div class="mb-3">
 					<label class="form-label">Username</label>
 					<input type="text" id="username" class="form-control" asp-for="Username" required />
-					<span class="text-danger" asp-validation-for="Username"></span>
+					<span class="text-danger" asp-validation-for="Username"></span> @* add this line for validation *@
 				</div>
 
 				<div class="mb-3">
